test/asm/syntax-error-after-syntax-error.err
error: syntax-error-after-syntax-error.asm(2):
    syntax error, unexpected *
error: syntax-error-after-syntax-error.asm(3):
    Unterminated string
error: syntax-error-after-syntax-error.asm(6):
    syntax error, unexpected xor
error: syntax-error-after-syntax-error.asm(9):
    syntax error, unexpected :
error: syntax-error-after-syntax-error.asm(10):
    syntax error, unexpected stop, expecting end of line or end of buffer or end of fragment literal or ::
Assembly aborted with 5 errors!
